wrap grid in the uk-container element

--- a/apps/templates/collection.html
+++ b/apps/templates/collection.html
@@ -62,8 +62,10 @@
     </div>
   </div>
 
-  {% include "snippets/_volumes_page_information.html" %}
-  {% include "snippets/_volumes_grid.html" %}
+  <div class="uk-container">
+    {% include "snippets/_volumes_page_information.html" %}
+    {% include "snippets/_volumes_grid.html" %}
+  </div>
 
 </div>
 {% include '_home/_footer.html' %}
