--- a/apps/templates/_home/_featured_story.html
+++ b/apps/templates/_home/_featured_story.html
@@ -1,15 +1,23 @@
+{% load wagtailimages_tags %}
+
 <div class="uk-section uk-section-default section-offset">
     <div class="uk-container">
         <div class="uk-child-width-expand@s" uk-grid>
+            {% if page.featured_story_image %}
             <div class="uk-width-1-4@s">
-                <img src="https://images.unsplash.com/photo-1512820790803-83ca734da794?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwzNjUyOXwwfDF8c2VhcmNofDF8fGJvb2slMkN8ZW58MHx8fHwxNjM0NTY2ODcy&ixlib=rb-1.2.1&q=80&w=400" alt="Image" class="uk-width-1-1">
+                {% image page.featured_story_image max-700x700 class="uk-width-1-1" %}
             </div>
             <div class="uk-width-3-4@s">
-                <h2 class="title uk-margin-small-bottom">Reviving Sacred Song: The Sounding Spirit Collaborative and Its Impact on American Vernacular Music History</h2>
+            {% else %}
+            <div class="uk-width-4-4@s">
+            {% endif%}
+                <h2 class="title uk-margin-small-bottom">{{ page.featured_story_title }}</h2>
                 <p class="truncate-text paragraph">
-                    The Sounding Spirit Collaborative engages sacred music from a dynamic era of American history. We make accessible and interpret historical sacred vernacular songbooks printed across territories and states spanning the southern United States from 1850 to 1925. Our ongoing scholarly edition and digital library work leverages collaborations between scholars, practitioners, librarians, and technologists to bring interdisciplinary, multi-modal expertise to the study and dissemination of these music books. These collaborations invite both scholarly and confessional reconsiderations of the role of sacred song in the lived experience of diverse communities. Working with texts and tunes often marginalized in music history, singers and scholars join Sounding Spirit in claiming a more diverse canon of southern vernacular sacred music.
+                    {{ page.featured_story_summary }}
                 </p>
-                <a class="uk-margin-top text-anchor uk-text-medium uk-text-bold">Read Full Story</a>
+                <a href="{{ page.featured_story_url }}" class="uk-margin-top text-anchor uk-text-medium uk-text-bold">
+                    Read Full Story
+                </a>
             </div>
         </div>
     </div>
