--- a/apps/templates/_home/_featured_collections.html
+++ b/apps/templates/_home/_featured_collections.html
@@ -1,10 +1,12 @@
-{% load readux_templatetags %}
+{% load readux_templatetags wagtailcore_tags %}
 
 <div class="uk-section uk-section-default uk-padding-remove-top">
     <div class="uk-container">
         <h2 class="uk-text-large uk-text-bold">
             Featured Collection{{page.featured_collections.all.count|pluralize}}
-            <a class="text-anchor">(See All Collections)</a>
+            {% if collectionsurl %}
+                <a class="text-anchor" href="{% pageurl collectionsurl %}">(See All Collections)</a>
+            {% endif %}
         </h2>
         
         <div uk-slider>
@@ -13,7 +15,7 @@
                     <div class="uk-slider-items uk-child-width-1-2 uk-child-width-1-3@s uk-child-width-1-4@m">
                         {% for collection in page.featured_collections.all|order_by:page.featured_collections_sort_order %}
                             <div class="uk-panel">
-                                <a href="#" class="grid-item">
+                                <a href="{% url 'collection' collection.pid %}" class="grid-item">
                                     <img src="/media/{{ collection.thumbnail }}" alt="{{ collection.label }}">
                                     <h2>{{ collection.label }}</h2>
                                 </a>
