--- a/apps/templates/_home/_featured_volumes.html
+++ b/apps/templates/_home/_featured_volumes.html
@@ -1,10 +1,12 @@
-{% load readux_templatetags %}
+{% load readux_templatetags wagtailcore_tags %}
 
 <div class="uk-section uk-section-default uk-padding-remove-top">
     <div class="uk-container">
         <h2 class="uk-text-large uk-text-bold">
             Featured Volume{{page.featured_volumes.all.count|pluralize}}
-            <a class="text-anchor">(See All Volumes)</a>
+            {% if volumesurl %}
+                <a class="text-anchor" href="{% pageurl volumesurl %}">(See All Volumes)</a>
+            {% endif %}
         </h2>
         <div uk-slider>
             <div class="uk-position-relative">
@@ -12,7 +14,7 @@
                     <div class="uk-slider-items uk-child-width-1-2 uk-child-width-1-3@s uk-child-width-1-4@m">
                         {% for volume in page.featured_volumes.all|order_by:page.featured_volumes_sort_order %}
                             <div class="uk-panel">
-                                <a href="#" class="grid-item">
+                                <a href="{% url 'volumeall' volume.pid %}" class="grid-item">
                                     <img src="{{ volume.start_canvas.thumbnail_crop_tallwide }}" alt="{{ volume.label }}">
                                     <h2>{{ volume.label }}</h2>
                                 </a>
