--- a/apps/templates/_home/_footer.html
+++ b/apps/templates/_home/_footer.html
@@ -1,12 +1,9 @@
-{% load static %}
+{% load static menu_tags %}
+
 <div class="footer">
     <div class="uk-container">
         <div class="footer-content uk-flex uk-flex-middle uk-flex-between">
-            <div class="footer-links uk-flex uk-flex-column uk-flex-center">
-                <a href="#">What Is Readux?</a>
-                <a href="#">What Is Sounding Spirit?</a>
-                <a href="#">Terms of Service</a>
-            </div>
+            {% flat_menu 'footer-menu' template="menus/footer_menu.html" %}
             <div class="footer-logo">
                 <a href="https://ecds.emory.edu">
                     <img src="{% static 'images/ecds-inverse.svg' %}" alt="Logo" style="height: 10vh;">
