--- a/apps/static/css/readux2/main.scss
+++ b/apps/static/css/readux2/main.scss
@@ -1,4 +1,21 @@
 /* base.html */
+html, body {
+    height: 100%;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+}
+
+#v-readux {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+}
+  
+main {
+    flex-grow: 1;
+}
+
 .landing {
     margin: 0;
     padding: 0;
