remove inline style for a button

--- a/apps/templates/search_results.html
+++ b/apps/templates/search_results.html
@@ -82,7 +82,7 @@
             <!-- <div class="uk-text-small">{{ form.q.label }}</div> -->
         </fieldset>
         <fieldset class="uk-width-auto uk-padding-remove-left">
-            <button class="uk-button uk-button-default" style="background-color: #E60000; color: white; padding: 0 9px; border:none; height: 40px;" type="submit">
+            <button class="uk-button search-button" type="submit">
                 <span uk-icon="icon:search"></span>
             </button>
         </fieldset>
