improve password reset page

--- a/apps/static/css/readux2/main.scss
+++ b/apps/static/css/readux2/main.scss
@@ -625,3 +625,7 @@ iframe {
         background-color: darken(#E60000, 25%);
     }
 }
+
+.justify-content-normal {
+    justify-content: normal !important;
+}
