left justified for the sign up page action buttons

--- a/apps/templates/account/signup.html
+++ b/apps/templates/account/signup.html
@@ -76,7 +76,7 @@
     {% endif %}
     
     <!-- Action Buttons -->
-    <div class="action-buttons uk-margin-bottom uk-width-1-1 uk-width-1-2@m">
+    <div class="action-buttons justify-content-normal uk-margin-bottom uk-width-1-1 uk-width-1-2@m">
       <button type="button" id="sign-up-form-reset-btn" class="uk-button uk-button-default">{% trans "Reset Form" %}</button>
       <button type="submit" class="uk-button sign-in-btn">{% trans "Sign Up" %} </button>
     </div>
