--- a/apps/templates/account/password_reset_done.html
+++ b/apps/templates/account/password_reset_done.html
@@ -1,4 +1,5 @@
 {% extends "account/base.html" %}
+{% load sass_tags %}
 
 {% load i18n %}
 {% load account %}
@@ -6,12 +7,28 @@
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
 {% block inner %}
-    <h1>{% trans "Password Reset" %}</h1>
+
+<link type="text/css" href="{% sass_src 'css/readux2/menu-inverse.scss' %}" rel="stylesheet">
+{% include '_home/_nav.html' %}
+
+<div class="uk-container uk-margin-bottom">
+
+    <!-- Breadcrumb -->
+    <ul class="breadcrumb uk-margin-small-top uk-margin-bottom">
+        <li><a href="/">Home</a></li>
+        <li>Password Reset</li>
+    </ul>
+    <!-- End -->
+
+    <h1 class="page-title uk-margin-top uk-margin-remove-bottom">{% trans "Password Reset" %}</h1>
     
     {% if user.is_authenticated %}
     {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
     
-    <p>{% blocktrans %}We have sent you an e-mail. Please contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
+    <p>{% blocktrans %}We have sent you an e-mail. Please <a href="#" class="uk-link text-anchor-blue">contact us</a> if you do not receive it within a few minutes.{% endblocktrans %}</p>
+</div>
+
+</div>
 {% endblock %}
 
