Allow custom background image via wagtail

--- a/apps/templates/_home/_nav.html
+++ b/apps/templates/_home/_nav.html
@@ -6,7 +6,7 @@
             <div class="uk-navbar-left">
                 <div class="uk-logo">
                     <div><a class="brand-logo" href="/">{{ request.site.name }}</a></div>
-                    <div class="brand-tagline">built on <a class="brand-readux">Readux</a></div>
+                    <div class="brand-tagline">built on <a class="brand-readux" href="https://readux.io/">Readux</a></div>
                 </div>
 
                 {% main_menu add_sub_menus_inline=True %}
