--- a/apps/templates/cms/home_page.html
+++ b/apps/templates/cms/home_page.html
@@ -29,6 +29,7 @@
       {% if page.featured_video_url %}
         {% include '_home/_video.html' %}
       {% endif %}
+      <div class="space"></div>
       {% include '_home/_footer.html' %}
   </div>
 </div>
